Bug 407770 - Text copied from one image to another is not editable
Summary: Text copied from one image to another is not editable
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression, release_blocker
Depends on:
Blocks:
 
Reported: 2019-05-20 15:36 UTC by n1k0l4
Modified: 2019-05-23 12:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description n1k0l4 2019-05-20 15:36:09 UTC
SUMMARY

if you copy a text layer from a krita window to another, you can't edit the text


STEPS TO REPRODUCE
1. open krita
2. create a new file
3. add a text (creating a vector layer)
4. copy the text (vector) layer from "Level - copy level"
5. create another new blank file
6. paste the text (vector) layer
7. try to edit text

OBSERVED RESULT
editing the copied text layer, and save it, the changes doesn't take effect


EXPECTED RESULT
editing the text and save it with success


SOFTWARE/OS VERSIONS
Windows: win 10 Pro
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2019-05-21 09:20:57 UTC
I can confirm the bug, thanks for the report.
Comment 2 Halla Rempt 2019-05-21 10:49:58 UTC
It is a regression from 4.1.8 and weirdly enough, the text is there, the bounding box expands if I add text, but the text is not renderered.
Comment 3 n1k0l4 2019-05-21 11:54:49 UTC
the same happens with vector square if you try to edit it
Comment 4 Dmitry Kazakov 2019-05-22 09:38:55 UTC
The same happens with normal shapes. Their rendering is disabled after copy-paste of the layers
Comment 5 Dmitry Kazakov 2019-05-22 09:46:21 UTC
Git commit 5c57bdefbed33e841747572f8761c3db9b5ee717 by Dmitry Kazakov.
Committed on 22/05/2019 at 09:45.
Pushed by dkazakov into branch 'master'.

Fix updates of vector layers after copy-paste
BACKPORT:krita/4.2

M  +1    -1    libs/ui/flake/kis_shape_layer.cc

https://invent.kde.org/kde/krita/commit/5c57bdefbed33e841747572f8761c3db9b5ee717
Comment 6 Halla Rempt 2019-05-23 12:17:35 UTC
Git commit 22785108074a83a447a6872cc8da91d60c1e1a25 by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 23/05/2019 at 11:56.
Pushed by rempt into branch 'krita/4.2'.

Fix updates of vector layers after copy-paste
BACKPORT:krita/4.2
(cherry picked from commit 5c57bdefbed33e841747572f8761c3db9b5ee717)

M  +1    -1    libs/ui/flake/kis_shape_layer.cc

https://invent.kde.org/kde/krita/commit/22785108074a83a447a6872cc8da91d60c1e1a25