Fix updates of vector layers after copy-paste

BUG:407770
BACKPORT:krita/4.2
(cherry picked from commit 5c57bdefbed33e841747572f8761c3db9b5ee717)